# icsmerge

./: default.nix  pyproject.toml  setup.cfg  shell.nix
example/: nextcloud.toml  vdsc.toml
src/icsmerge/: __init__.py  download.py  ics.py
src/icsmerge/config/: __init__.py  util.py
src/icsmerge/processors/: __init__.py  add_default_image_from_nextcloud_attachment.py  add_default_property.py  add_default_timezone.py  add_default_url.py  filter_out.py  mod_uid.py  strip_emoji.py
tests/: test_black.py  test_emoji.py  test_flake8.py  test_isort.py  test_mypy.py
