[project]
name = "icsmerge"
version = "0.0.0"
authors = [
    { name = "schnusch", email = "schnusch@users.noreply.github.com" },
]
license = "GPL-2.0-or-later"
license-files = ["COPYING.md"]
requires-python = ">=3.11"
dependencies = [
    "aiohttp",
    "emoji",
    "icalendar",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
tests = [
    "black",
    "flake8",
    "isort",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
icsmerge = "icsmerge:main"

[build-system]
requires = [
    "setuptools>=61",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.flake8]
max-line-length = 88
# E203 conflicts with black
ignore = ["E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
]

[tool.mypy]
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true
