[metadata]
name = icsmerge
author = schnusch
license = GPL-2.0-or-later
license_files =
    COPYING.md

[options]
package_dir =
    = src
install_requires =
    aiohttp
    emoji
    icalendar
    tomli; python_version < "3.11"
test_suite = tests
tests_require =
    black
    flake8
    isort
    mypy

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    icsmerge = icsmerge:main

[flake8]
max-line-length = 88
# E203 conflicts with black
ignore = E501,W503
exclude = .git,__pycache__,build,dist

[mypy]
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true
